--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Matt Castelli - Professional Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="main.css" />
-		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -43,7 +43,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<div class="image about">
-									<img src="Castelli, Matthew High Res.jpg" alt="" />
+									<img src="images/Castelli, Matthew High Res.jpg" alt="" />
 									<p>&#128075; &nbsp;&nbsp; Hi, I'm Matt! </p>
 									<p>&#128188; &nbsp;&nbsp; Senior Data Scientist at EY</p>
 									<p>&#128509; &nbsp;&nbsp; Based in New York City; DC Native </p>
@@ -64,7 +64,7 @@
 							<article id="skills">
 								<h2 class="major">Skills</h2>
 								<h3>Certifications</h3>
-								<div class="image about"><a href="https://www.credly.com/badges/863ada1f-f563-4dcc-9c92-7d6882577333/public_url" target="_blank" rel="noopener noreferrer"><img src="bronze_analytics.png" alt="" /></a>
+								<div class="image about"><a href="https://www.credly.com/badges/863ada1f-f563-4dcc-9c92-7d6882577333/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_analytics.png" alt="" /></a>
 									<p>
 										Certification: EY Data Science Badge - Bronze
 										Completed: <br>
@@ -73,7 +73,7 @@
 										&nbsp;&nbsp;&nbsp;&nbsp;- Joined Data Science groups within EY to &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;share/contribute knowledge
 									</p>
 								</div>
-								<div class="image about"><a href="https://www.credly.com/badges/a359e578-1238-4003-a52c-45a65fd279db/public_url" target="_blank" rel="noopener noreferrer"><img src="bronze_viz.png" alt="" /></a>
+								<div class="image about"><a href="https://www.credly.com/badges/a359e578-1238-4003-a52c-45a65fd279db/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_viz.png" alt="" /></a>
 									<p>
 										Certification: EY Data Visualization Badge - Bronze (Silver - Approved, pending Issuance by Thrid Party) <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- 40+ hours of training <br>
@@ -106,7 +106,7 @@
 							<!-- Work Acknowledgements -->
 								<h2 class="major">Work Acknowledgements</h2><br>
 								<h3>PPP Loan Forgiveness Reporting</h3>
-								<span class="image fit"><a href="https://customers.microsoft.com/en-us/story/1344051519177703370-ey-professional-services-power-apps" target="_blank" rel="noopener noreferrer"><img src="microsoft_ey_ss.png" alt="" /></a>
+								<span class="image fit"><a href="https://customers.microsoft.com/en-us/story/1344051519177703370-ey-professional-services-power-apps" target="_blank" rel="noopener noreferrer"><img src="images/microsoft_ey_ss.png" alt="" /></a>
 									<figcaption>Fig.1: PPP Repoting Dashboard - Click for more detail!</figcaption>
 								</span>
 								<blockquote>
@@ -124,7 +124,7 @@
 							<!-- Personal Projects -->
 							<h2 class="major">Personal Projects</h2><br>
 							<h3>Spotify Artist Analyzer</h3>
-							<span class="image fit"><a href="https://github.com/mcastelli5/Spotify-Artist-Analyzer" target="_blank" rel="noopener noreferrer"><img src="artist_analyzer_rdrchart.png" alt="" /></a>
+							<span class="image fit"><a href="https://github.com/mcastelli5/Spotify-Artist-Analyzer" target="_blank" rel="noopener noreferrer"><img src="images/artist_analyzer_rdrchart.png" alt="" /></a>
 								<figcaption>Fig.2: Spotify Artist Analyzer - Click for more detail!</figcaption>
 							</span>
 							<p>
@@ -136,7 +136,7 @@
 							</p><br>
 
 								<h3>Forecasting the Stock Market</h3>
-								<span class="image fit"><a href="https://github.com/mcastelli5/Forecasting-stock-market" target="_blank" rel="noopener noreferrer"><img src="forecasting_the_stock_market_ss.png" alt="" /></a>
+								<span class="image fit"><a href="https://github.com/mcastelli5/Forecasting-stock-market" target="_blank" rel="noopener noreferrer"><img src="images/forecasting_the_stock_market_ss.png" alt="" /></a>
 									<figcaption>Fig.3: Forecasting the Stock Market - Click for more detail!</figcaption>
 								</span>
 								<p>
@@ -414,11 +414,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-			<script src="jquery.min.js"></script>
-			<script src="browser.min.js"></script>
-			<script src="breakpoints.min.js"></script>
-			<script src="util.js"></script>
-			<script src="main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
