--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										These personal attributes drive my passion for providing thoughtful and impactful analysis of big data.
 									</p>
 									<p>
-										For further detail into my personal and professional career, please feel free to checkout my <a href="#projects">projects</a> and <a href="overlay.png" download>resume</a>!
+										For further detail into my personal and professional career, please feel free to checkout my <a href="#projects">projects</a> or contact me directly to discuss my professional experience!
 									</p>
 								</div>
 							</article>
@@ -150,7 +150,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>Feel free to checkout my other profile's below, or send me an <a href = "mailto: matt.castelli2@gmail.com">email</a> directly!</p>
+								<p>Feel free to checkout my other profile's below, or send me an email at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/matt-castelli-1b8689116/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/mcastelli5" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
