--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
 								</div>
 								<h3>Languages</h3>
 								<ul>
-									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, Seaborn, Matplotlib, etc...)</li>
+									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, etc...)</li>
 									<li>SQL</li>
-									<li>HTML & CSS</li>
+									<li>HTML, CSS, and JavaScript</li>
 								</ul>
 								<h4>Visualization Tools</h4>
 								<ul>
 									<li>Power BI</li>
 									<li>Tableau</li>
+									<li>Python - Seaborn, Matplotlib, Plotly</li>
 								</ul>
 								<h4>Other Analytical Tools</h4>
 								<ul>
