Final launch changes

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 								<div class="image about">
 									<img src="images/Castelli, Matthew High Res.jpg" alt="" />
 									<p>&#128075; &nbsp;&nbsp; Hi, I'm Matt! </p>
-									<p>&#128188; &nbsp;&nbsp; Senior Data Scientist at EY</p>
+									<p>&#128188; &nbsp;&nbsp; Senior Data Scientist @ EY</p>
 									<p>&#128509; &nbsp;&nbsp; Based in New York City; DC Native </p>
 									<p>&#128171; &nbsp;&nbsp; Aspiring Data-Driven Leader </p>
 									<p>&#128218; &nbsp;&nbsp; Hobbies: Exploring outdoors, Reading, and &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Basketball </p>
 									<p>
 										My professional goal is to act as the liaison between Technology and Business domains, in an effort to unify their objectives into one efficient, cross-functional strategy.
 										I pride myself on my business ethics, extreme curiosity, and ambition to always be at the forefront of cutting-edge technology.
-										These personal attributes drive my passion for providing thoughtful and impactful analysis of big data.
+										These personal attributes drive my passion for providing thoughtful and impactful analysis using big data.
 									</p>
 									<p>
 										For further detail into my personal and professional career, please feel free to checkout my <a href="#projects">projects</a> or contact me directly to discuss my professional experience!
@@ -84,13 +84,13 @@
 								<ul>
 									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, etc...)</li>
 									<li>SQL</li>
-									<li>HTML, CSS, and JavaScript</li>
+									<li>HTML, CSS, & JavaScript</li>
 								</ul>
 								<h4>Visualization Tools</h4>
 								<ul>
 									<li>Power BI</li>
 									<li>Tableau</li>
-									<li>Python - Seaborn, Matplotlib, Plotly</li>
+									<li>Python Libraries - Seaborn, Matplotlib, and Plotly</li>
 								</ul>
 								<h4>Other Analytical Tools</h4>
 								<ul>
@@ -128,7 +128,7 @@
 								<figcaption>Fig.2: Spotify Artist Analyzer - Click for more detail!</figcaption>
 							</span>
 							<p>
-								In this project, the Spotify API (Spotipy) and several python data analysis/visualization libraries were utilized to create an "Artist Analyzer". With the help of the user's input of which artists to include, the analyzer creates different slices of artist information, and several visualizations for more comprehensive analysis.
+								In this project, the Spotify API (Spotipy) and several python data analysis/visualization libraries were utilized to create an "Artist Analyzer". With the help of the user's input to determine which artists to include, the analyzer creates different slices of artist information, and several visualizations for more comprehensive analysis.
 								<br><br>
 								The analysis is based on the Top 10 Spotify Tracks for each artist, and the respective feature metrics for each track. Track features include: danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence, tempo. These features allow for an in-depth analysis of any song within the Spotify database.
 								<br><br>
@@ -151,7 +151,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>Feel free to checkout my other profile's below, or send me an email at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!</p>
+								<p>Feel free to check out my other profile's below, and/or send me an email at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/matt-castelli-1b8689116/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/mcastelli5" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
