--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 								<p>
 									Click the image above to read into more detail about the project and how EY partnered with Microsoft to provide an innovative solution.
 								</p>
+								<p>
+									For more detail about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
+								</p>
 
 							<!-- Personal Projects -->
 							<h2 class="major">Personal Projects</h2><br>
@@ -142,7 +145,7 @@
 								<p>
 									In this project, two machine learning algorithms are utilized, Vector Support Regression and Dynamic Time Warping, in an effort to enhance my competitive advantage in the stock market. These models were benchmarked against basic intraday and overnight buying strategies, to assess the effectiveness and credibility over a certain period of time.
 									<br><br>
-									Although forecasting the stock market is nearly impossible, I had a great opportunity to experiment with two completely different machine learning models, and learn the similarities and differences in a real world example.
+									Although forecasting the stock market is nearly impossible, I had a great opportunity to experiment with two completely different machine learning models, and learn the similarities/differences in a real world example.
 									<br><br>
 									Click the image above for a deeper dive into the technical aspects of the project and the final results!
 								</p>
