--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
 								<p>
 									Click the image above to read into more detail about the project and how EY partnered with Microsoft to provide an innovative solution.
 								</p>
-								<p>
-									For more detail about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
-								</p>
+								<span style="background-color: #FFFF00">
+									<p>
+										For more detail about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
+									</p>
+								</span>
 
 							<!-- Personal Projects -->
 							<h2 class="major">Personal Projects</h2><br>
