--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<p>
 									Click the image above to read into more detail about the project and how EY partnered with Microsoft to provide an innovative solution.
 								</p>
-								<p style="background-color: #FFFF00">
+								<p style="background-color: #F4ECC2">
 									For more detail about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
 								</p>
 
