--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Matt Castelli - Professional Website</title>
+		<title>Matt Castelli - Professional Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +48,7 @@
 										I pride myself on my business ethics, extreme curiosity, and ambition to always be at the forefront of cutting-edge technology.
 										These personal attributes drive my passion for providing thoughtful and impactful analysis using big data.
 									</p>
-									<p>
+									<p class='highlighted'>
 										For further detail into my personal and professional career, please feel free to checkout my <a href="#projects">projects</a> and contact me directly to discuss my professional experience!
 									</p>
 								</div>
