--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 										These personal attributes drive my passion for providing thoughtful and impactful analysis using big data.
 									</p>
 									<p>
-										<mark>
-											For further detail into my personal and professional career, please feel free to checkout my <a href="#projects">projects</a> and <a href="#contact">contact</a> me directly to discuss my professional experience!
-										</mark>
+										<mark>For further detail into my personal and professional career, please feel free to checkout my <a href="#projects">projects</a> and <a href="#contact">contact</a> me directly to discuss my professional experience!</mark>
 									</p>
 								</div>
 							</article>
