--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										&nbsp;&nbsp;&nbsp;&nbsp;- Demonstrated skills on external project <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- Lead Power BI trainings within EY to over 400+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coworkers (Staff-Partners)
 									</p>
-								</div>
+								</div><br>
 								<h3>Languages</h3>
 								<ul>
 									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, etc...)</li>
