--- a/index.html
+++ b/index.html
@@ -116,8 +116,11 @@
 									Click the image above to read into more detail about the project and how EY partnered with Microsoft to provide an innovative solution.
 								</p>
 								<p>
-									For more detail about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
+									<strong>
+										For more details about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
+									</stong>
 								</p>
+								<br>
 
 							<!-- Personal Projects -->
 							<h2 class="major">Personal Projects</h2><br>
