--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="about">
 								<h2 class="major">Contact</h2>
 								<p>Feel free to check out my other profile's below and send me an email at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!</p>
 								<ul class="icons">
