--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<p>
 									<strong>
 										For more details about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
-									</stong>
+									</strong>
 								</p>
 								<br>
 
