--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<h2 class="major">About</h2>
 								<div class="image about">
 									<img src="images/Castelli, Matthew High Res.jpg" alt="" />
-									<p>&#128075; &nbsp;&nbsp; Hi, I'm Matt! </p>
+									<p>&#128075; &nbsp;&nbsp; Hi, I'm Matt </p>
 									<p>&#128188; &nbsp;&nbsp; Senior Data Scientist @ EY</p>
 									<p>&#128509; &nbsp;&nbsp; Based in New York City; DC Native </p>
 									<p>&#128171; &nbsp;&nbsp; Aspiring Data-Driven Leader </p>
@@ -117,7 +117,7 @@
 								</p>
 								<p>
 									<strong>
-										For more details about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!
+										For more details about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>.
 									</strong>
 								</p>
 								<br>
@@ -152,7 +152,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>Feel free to check out my other profile's below and send me an email at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>!</p>
+								<p>Feel free to check out my other profile's below and send me an email at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>.</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/matt-castelli-1b8689116/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/mcastelli5" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
