--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								</div>
 								<div class="image about"><a href="https://www.credly.com/badges/a359e578-1238-4003-a52c-45a65fd279db/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_viz.png" alt="" /></a>
 									<p>
-										Certification: EY Data Visualization Badge - Bronze (Silver - Approved, pending Issuance by Thrid Party) <br>
+										Certification: EY Data Visualization Badge - Bronze (Silver - Approved, pending Issuance) <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- 40+ hours of training <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- Demonstrated skills on external project <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- Lead Power BI trainings within EY to over 400+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coworkers (Staff-Partners)
@@ -77,7 +77,7 @@
 								</div><br>
 								<h3>Languages</h3>
 								<ul>
-									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, etc...)</li>
+									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, MLlib etc...)</li>
 									<li>SQL</li>
 									<li>HTML, CSS, & JavaScript</li>
 								</ul>
@@ -99,7 +99,7 @@
 							<article id="projects">
 
 							<!-- Work Acknowledgements -->
-								<h2 class="major">Work Acknowledgements</h2><br>
+								<h2 class="major">Work Experience</h2><br>
 								<h3>PPP Loan Forgiveness Reporting</h3>
 								<span class="image fit"><a href="https://customers.microsoft.com/en-us/story/1344051519177703370-ey-professional-services-power-apps" target="_blank" rel="noopener noreferrer"><img src="images/microsoft_ey_ss.png" alt="" /></a>
 									<figcaption>Fig.1: PPP Repoting Dashboard - Click for more detail!</figcaption>
