--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 								<ul>
 									<li>Databricks</li>
 									<li>Anaconda Application Suite (Spyder, Jupyter Notebook, and JupyterLab)</li>
+									<li>MATLAB</li>
+									<li>Octave</li>
 									<li>Snowflake</li>
 								</ul>
 							</article>
