--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 							<ul>
 								<li><a href="#about">About</a></li>
 								<li><a href="#skills">Skills</a></li>
+								<li><a href="#coursework">Coursework</a></li>
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
@@ -54,40 +55,22 @@
 								</div>
 							</article>
 
-						<!-- Skills -->
+						<!-- Skills-->
 							<article id="skills">
 								<h2 class="major">Skills</h2>
-								<h3>Certifications</h3>
-								<div class="image about"><a href="https://www.credly.com/badges/863ada1f-f563-4dcc-9c92-7d6882577333/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_analytics.png" alt="" /></a>
-									<p>
-										Certification: EY Data Science Badge - Bronze
-										Completed: <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 20+ hours of training <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- Used new skills for internal recruitment project <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- Joined Data Science groups within EY to &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;share/contribute knowledge
-									</p>
-								</div>
-								<div class="image about"><a href="https://www.credly.com/badges/a359e578-1238-4003-a52c-45a65fd279db/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_viz.png" alt="" /></a>
-									<p>
-										Certification: EY Data Visualization Badge - Bronze (Silver - Approved, pending Issuance) <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 40+ hours of training <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- Demonstrated skills on external project <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- Lead Power BI trainings within EY to over 400+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coworkers (Staff-Partners)
-									</p>
-								</div><br>
 								<h3>Languages</h3>
 								<ul>
 									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, MLlib etc...)</li>
 									<li>SQL</li>
 									<li>HTML, CSS, & JavaScript</li>
 								</ul>
-								<h4>Visualization Tools</h4>
+								<h3>Visualization Tools</h3>
 								<ul>
 									<li>Power BI</li>
 									<li>Tableau</li>
 									<li>Python Libraries - Seaborn, Matplotlib, and Plotly</li>
 								</ul>
-								<h4>Other Analytical Tools</h4>
+								<h3>Other Analytical Tools</h3>
 								<ul>
 									<li>Databricks</li>
 									<li>Anaconda Application Suite (Spyder, Jupyter Notebook, and JupyterLab)</li>
@@ -97,34 +80,79 @@
 								</ul>
 							</article>
 
+						<!-- Coursework -->
+							<article id="coursework">
+								<h2 class="major">Coursework</h2>
+								<h3>Data Science</h3>
+								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/track/bf4f2d26657a0cea0bb838efd0df91482ad438c9" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
+								<h4>Data Science with Python</h4>
+									<p>
+										Requirements: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+									</p>
+								</div>
+								<div class="image about"><a href="https://www.credly.com/badges/863ada1f-f563-4dcc-9c92-7d6882577333/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_analytics.png" alt="" /></a>
+									<h4>EY Data Science Badge - Bronze</h4>
+									<p>
+										Requirements: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 20+ hours of training <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Used new skills for internal recruitment project <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Joined Data Science groups within EY to &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;share/contribute knowledge
+									</p>
+								</div>
+								<div class="image about"><a href="https://www.credly.com/badges/a359e578-1238-4003-a52c-45a65fd279db/public_url" target="_blank" rel="noopener noreferrer"><img src="images/bronze_viz.png" alt="" /></a>
+									<h4>EY Data Visualization Badge - Bronze</h4>
+									<p>
+										Requirements: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 40+ hours of training <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Demonstrated skills on external project <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Lead Power BI trainings within EY to over 400+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coworkers (Staff-Partners)
+									</p>
+								</div><br>
+								<h3>Machine Learning</h3>
+								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/b35bb101ffcd2f3eb97fd1f17cdefbe99a5d4271" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
+								<h4>Machine Learning for Business</h4>
+									<p>
+										Summary: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+									</p>
+								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/c5ab66c0e59b61443eeb1f712aa11a24e047e3b3" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
+								<h4>Supervised Learning with scikit-learn</h4>
+									<p>
+										Summary: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+									</p>
+								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/b77cc40aa03ac48cbd8b19285b41b51632d2c633" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
+								<h4>Unsupervised Learning in Python</h4>
+									<p>
+										Summary: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+									</p>
+								</div><br>
+								<h3>Programming</h3>
+								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/8931666c5b50fcf1008e089016069f27d73ff0c6?share=true" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
+								<h4>Writing Efficient Python Code</h4>
+									<p>
+										Summary: <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+									</p>
+
+							</article>
+
 						<!-- Projects -->
 							<article id="projects">
 
-							<!-- Work Acknowledgements -->
-								<h2 class="major">Work Experience</h2><br>
-								<h3>PPP Loan Forgiveness Reporting</h3>
-								<span class="image fit"><a href="https://customers.microsoft.com/en-us/story/1344051519177703370-ey-professional-services-power-apps" target="_blank" rel="noopener noreferrer"><img src="images/microsoft_ey_ss.png" alt="" /></a>
-									<figcaption>Fig.1: PPP Repoting Dashboard - Click for more detail!</figcaption>
-								</span>
-								<blockquote>
-									"Additionally, interoperability with Power BI provides the bank with dashboards displaying real-time metrics, such as the number of loans processed, time to process, quality check logs, and performance reports for EY’s VOC team...
-									<br><br>
-									...Using the tool, EY has been able to process over 50,000 loans totaling more than $10 billion on behalf of its banking customers. What’s more, as the number of PPP loan forgiveness applications has soared, the value of an automated process has also grown."
-								</blockquote>
-								<p>
-									In response to the Covid-19 pandemic, EY was tasked with an unprecedented assignment to quickly develop a flexible PPP loan forgiveness solution for multiple banks that adhered to the rapidly changing guidelines from the SBA. I had the opportunity to support the reporting team in the overall effort to complete this project in a timely and efficient manner.
-								</p>
-								<p>
-									Click the image above to read into more detail about the project and how EY partnered with Microsoft to provide an innovative solution.
-								</p>
-								<p>
-									<strong>
-										For more details about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>.
-									</strong>
-								</p>
-								<br>
-
-							<!-- Personal Projects -->
+						<!-- Personal Projects -->
 							<h2 class="major">Personal Projects</h2><br>
 							<h3>Spotify Artist Analyzer</h3>
 							<span class="image fit"><a href="https://github.com/mcastelli5/Spotify-Artist-Analyzer" target="_blank" rel="noopener noreferrer"><img src="images/artist_analyzer_rdrchart.png" alt="" /></a>
@@ -149,6 +177,30 @@
 									<br><br>
 									Click the image above for a deeper dive into the technical aspects of the project and the final results!
 								</p>
+
+						<!-- Work Acknowledgements -->
+							<h2 class="major">Acknowledgements</h2><br>
+							<h3>PPP Loan Forgiveness Reporting</h3>
+							<span class="image fit"><a href="https://customers.microsoft.com/en-us/story/1344051519177703370-ey-professional-services-power-apps" target="_blank" rel="noopener noreferrer"><img src="images/microsoft_ey_ss.png" alt="" /></a>
+								<figcaption>Fig.1: PPP Repoting Dashboard - Click for more detail!</figcaption>
+							</span>
+							<blockquote>
+								"Additionally, interoperability with Power BI provides the bank with dashboards displaying real-time metrics, such as the number of loans processed, time to process, quality check logs, and performance reports for EY’s VOC team...
+								<br><br>
+								...Using the tool, EY has been able to process over 50,000 loans totaling more than $10 billion on behalf of its banking customers. What’s more, as the number of PPP loan forgiveness applications has soared, the value of an automated process has also grown."
+							</blockquote>
+							<p>
+								In response to the Covid-19 pandemic, EY was tasked with an unprecedented assignment to quickly develop a flexible PPP loan forgiveness solution for multiple banks that adhered to the rapidly changing guidelines from the SBA. I had the opportunity to support the reporting team in the overall effort to complete this project in a timely and efficient manner.
+							</p>
+							<p>
+								Click the image above to read into more detail about the project and how EY partnered with Microsoft to provide an innovative solution.
+							</p>
+							<p>
+								<strong>
+									For more details about my professional experience, please contact me at <a href = "mailto: matt.castelli2@gmail.com">matt.castelli2@gmail.com</a>.
+								</strong>
+							</p>
+							<br>
 							</article>
 
 						<!-- Contact -->
