--- a/index.html
+++ b/index.html
@@ -116,25 +116,25 @@
 								<h4>Machine Learning for Business</h4>
 									<p>
 										Summary: <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- ML in production best practices and common &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mistakes <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- ML data pyramid <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Business objectives and ML performance metrics <br>
 									</p>
 								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/c5ab66c0e59b61443eeb1f712aa11a24e047e3b3" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
 								<h4>Supervised Learning with scikit-learn</h4>
 									<p>
 										Summary: <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Regression and Logistic Regression <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Bias / Variance Tradeoff and ROC curve <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Preprocessing data and Hypertuning parameters <br>
 									</p>
 								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/b77cc40aa03ac48cbd8b19285b41b51632d2c633" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
 								<h4>Unsupervised Learning in Python</h4>
 									<p>
 										Summary: <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Hierarchical clustering and kMeans clustering <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- PCA and t-SNE <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- NLP and tf-idf <br>
 									</p>
 								</div><br>
 								<h3>Programming</h3>
@@ -142,9 +142,9 @@
 								<h4>Writing Efficient Python Code</h4>
 									<p>
 										Summary: <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 23 courses <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 6 projects <br>
-										&nbsp;&nbsp;&nbsp;&nbsp;- 3 skill assessments <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Pythonic practices <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Time and Space complexity <br>
+										&nbsp;&nbsp;&nbsp;&nbsp;- Set Theory and efficient looping alternatives <br>
 									</p>
 
 							</article>
