--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 								<h2 class="major">Skills</h2>
 								<h3>Languages</h3>
 								<ul>
-									<li>Python (PySpark, Pandas, NumPy, Scikit-learn, MLlib etc...)</li>
+									<li>Python (Pandas, NumPy, Scikit-learn, TensorFlow, Keras, etc.)</li>
+									<li>Apache Spark (PySpark and MLlib)</li>
 									<li>SQL</li>
 									<li>HTML, CSS, & JavaScript</li>
 								</ul>
@@ -74,8 +75,6 @@
 								<ul>
 									<li>Databricks</li>
 									<li>Anaconda Application Suite (Spyder, Jupyter Notebook, and JupyterLab)</li>
-									<li>MATLAB</li>
-									<li>Octave</li>
 									<li>Snowflake</li>
 								</ul>
 							</article>
